--- a/package.json
+++ b/package.json
@@ -12,7 +12,21 @@
     "IE 10"
   ],
   "scripts": {
-
+    "dev:client": "webpack-dev-server --env.NODE_ENV=development --config ./config/webpack.client.js",
+    "dev:admin": "webpack --watch --env.NODE_ENV=development --config ./config/webpack.admin.js",
+    "dev": "nodemon --watch ./config --watch ./config.json --exec \"npm-run-all --parallel dev:admin dev:client\"",
+    "build:client": "npx webpack --env.NODE_ENV=production --config ./config/webpack.client.js",
+    "build:admin": "npx webpack --env.NODE_ENV=production --config ./config/webpack.admin.js",
+    "build": "npm-run-all gtfo --parallel build:admin build:client",
+    "lint": "eslint src/ --cache",
+    "lint:fix": "eslint src/ --cache --fix",
+    "postinstall": "npm run build",
+    "gtfo": "rimraf dist"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run lint"
+    }
   },
   "repository": {
     "type": "git",
@@ -25,9 +39,57 @@
   },
   "homepage": "https://github.com/k1sul1/wordpress-theme-base#readme",
   "devDependencies": {
-
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
+    "copy-webpack-plugin": "^5.0.1",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-semistandard": "^13.0.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "file-loader": "^3.0.1",
+    "husky": "^1.3.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "nodemon": "^1.18.10",
+    "npm-run-all": "^4.1.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
+    "prettier": "^1.17.0",
+    "react-hot-loader": "^4.8.0",
+    "resolve-url-loader": "^3.1.0",
+    "rimraf": "^2.6.3",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "terser-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.2.1",
+    "write-file-webpack-plugin": "^4.5.0"
   },
   "dependencies": {
-
+    "core-js": "^3.1.3",
+    "regenerator-runtime": "^0.13.2"
   }
 }
