--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "dev:client": "webpack-dev-server --env.NODE_ENV=development --config ./config/webpack.client.js",
     "dev:admin": "webpack --watch --env.NODE_ENV=development --config ./config/webpack.admin.js",
     "dev": "nodemon --watch ./config --watch ./config.json --exec \"npm-run-all --parallel dev:admin dev:client\"",
-    "build:client": "npx webpack --env.NODE_ENV=production --config ./config/webpack.client.js",
-    "build:admin": "npx webpack --env.NODE_ENV=production --config ./config/webpack.admin.js",
+    "build:client": "webpack --env.NODE_ENV=production --config ./config/webpack.client.js",
+    "build:admin": "webpack --env.NODE_ENV=production --config ./config/webpack.admin.js",
     "build": "npm-run-all gtfo --parallel build:admin build:client",
     "lint": "eslint src/ --cache",
     "lint:fix": "eslint src/ --cache --fix",
@@ -39,9 +39,9 @@
   },
   "homepage": "https://github.com/k1sul1/wordpress-theme-base#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/plugin-proposal-function-sent": "^7.2.0",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
@@ -50,39 +50,39 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
-    "copy-webpack-plugin": "^5.0.1",
-    "css-loader": "^2.1.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "copy-webpack-plugin": "^5.0.3",
+    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^3.0.1",
-    "husky": "^1.3.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "nodemon": "^1.18.10",
+    "file-loader": "^4.0.0",
+    "husky": "^2.4.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.17.0",
-    "react-hot-loader": "^4.8.0",
+    "prettier": "^1.18.2",
+    "react-hot-loader": "^4.11.0",
     "resolve-url-loader": "^3.1.0",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "terser-webpack-plugin": "^1.2.4",
-    "url-loader": "^1.1.2",
+    "terser-webpack-plugin": "^1.3.0",
+    "url-loader": "^2.0.0",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.2.1",
+    "webpack-dev-server": "^3.7.1",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1",
     "write-file-webpack-plugin": "^4.5.0"
