--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^4.0.0",
     "husky": "^2.4.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.7.0",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
@@ -89,6 +90,8 @@
   },
   "dependencies": {
     "core-js": "^3.1.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "regenerator-runtime": "^0.13.2"
   }
 }
