--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "write-file-webpack-plugin": "^4.5.0"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^16.8.6",
     "core-js": "^3.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
