--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.6",
     "core-js": "^3.1.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "regenerator-runtime": "^0.13.2"
