--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Christian Nikkanen",
-            "email": "christian.nikkanen@k1sul1.com"
+            "email": "me@kisu.li"
         }
     ],
     "minimum-stability": "stable",
